// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UtilizationItem /> renders correctly 1`] = `
<div
  class="kubevirt-utilization__item-narrow"
>
  <div
    class="row"
  >
    <div
      class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
    >
      title
    </div>
    <div
      class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
    >
      5 %
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
    >
      <div
        class="VictoryContainer"
        style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
      >
        <svg
          aria-labelledby="victory-container-1-title victory-container-1-desc"
          height="60"
          role="img"
          style="pointer-events:all;width:100%;height:100%"
          viewBox="0 0 300 60"
          width="300"
        >
          <g
            clip-path="url(#victory-clip-2)"
            style="height:100%;width:100%;user-select:none"
          >
            <defs>
              <clipPath
                id="victory-clip-2"
              >
                <rect
                  height="45"
                  role="presentation"
                  shape-rendering="auto"
                  vector-effect="non-scaling-stroke"
                  width="260"
                  x="40"
                  y="10"
                />
              </clipPath>
            </defs>
            <g>
              <path
                d="M40,51.46116504854369L105,55L170,49.69174757281554L235,19.611650485436897L300,53.230582524271846L300,55L235,55L170,55L105,55L40,55Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
              />
              <path
                d="M40,51.46116504854369L105,55L170,49.69174757281554L235,19.611650485436897L300,53.230582524271846"
                role="presentation"
                shape-rendering="auto"
                style="fill:none;fill-opacity:0.4;stroke:#39a5dc;stroke-width:2"
              />
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
              vector-effect="non-scaling-stroke"
              x1="40"
              x2="40"
              y1="10"
              y2="55"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:none;fill:none;pointer-events:painted"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="300"
                y1="55"
                y2="55"
              />
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:transparent;fill:transparent;size:1px"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="39"
                y1="55"
                y2="55"
              />
              <text
                direction="inherit"
                dx="0"
                dy="3.55"
                x="29"
                y="55"
              >
                <tspan
                  dx="0"
                  style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#282d33;stroke:transparent"
                  text-anchor="end"
                  x="29"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:none;fill:none;pointer-events:painted"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="300"
                y1="55"
                y2="55"
              />
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:transparent;fill:transparent;size:1px"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="39"
                y1="55"
                y2="55"
              />
            </g>
          </g>
        </svg>
        <div
          style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
        >
          <svg
            height="60"
            style="overflow:visible;width:100%;height:100%"
            viewBox="0 0 300 60"
            width="300"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UtilizationItem /> renders correctly 2`] = `
<div
  class="kubevirt-utilization__item-narrow"
>
  <div
    class="row"
  >
    <div
      class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
    >
      title
    </div>
    <div
      class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
    >
      5 %
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
    >
      <div
        class="VictoryContainer"
        style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
      >
        <svg
          aria-labelledby="victory-container-3-title victory-container-3-desc"
          height="60"
          role="img"
          style="pointer-events:all;width:100%;height:100%"
          viewBox="0 0 300 60"
          width="300"
        >
          <g
            clip-path="url(#victory-clip-4)"
            style="height:100%;width:100%;user-select:none"
          >
            <defs>
              <clipPath
                id="victory-clip-4"
              >
                <rect
                  height="45"
                  role="presentation"
                  shape-rendering="auto"
                  vector-effect="non-scaling-stroke"
                  width="260"
                  x="40"
                  y="10"
                />
              </clipPath>
            </defs>
            <g>
              <path
                d="M40,51.46116504854369L105,55L170,49.69174757281554L235,19.611650485436897L300,53.230582524271846L300,55L235,55L170,55L105,55L40,55Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
              />
              <path
                d="M40,51.46116504854369L105,55L170,49.69174757281554L235,19.611650485436897L300,53.230582524271846"
                role="presentation"
                shape-rendering="auto"
                style="fill:none;fill-opacity:0.4;stroke:#39a5dc;stroke-width:2"
              />
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
              vector-effect="non-scaling-stroke"
              x1="40"
              x2="40"
              y1="10"
              y2="55"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:none;fill:none;pointer-events:painted"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="300"
                y1="55"
                y2="55"
              />
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:transparent;fill:transparent;size:1px"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="39"
                y1="55"
                y2="55"
              />
              <text
                direction="inherit"
                dx="0"
                dy="3.55"
                x="29"
                y="55"
              >
                <tspan
                  dx="0"
                  style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#282d33;stroke:transparent"
                  text-anchor="end"
                  x="29"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:none;fill:none;pointer-events:painted"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="300"
                y1="37.30582524271845"
                y2="37.30582524271845"
              />
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:transparent;fill:transparent;size:1px"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="39"
                y1="37.30582524271845"
                y2="37.30582524271845"
              />
              <text
                direction="inherit"
                dx="0"
                dy="3.55"
                x="29"
                y="37.30582524271845"
              >
                <tspan
                  dx="0"
                  style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#282d33;stroke:transparent"
                  text-anchor="end"
                  x="29"
                >
                  50
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:none;fill:none;pointer-events:painted"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="300"
                y1="19.611650485436897"
                y2="19.611650485436897"
              />
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke:transparent;fill:transparent;size:1px"
                vector-effect="non-scaling-stroke"
                x1="40"
                x2="39"
                y1="19.611650485436897"
                y2="19.611650485436897"
              />
              <text
                direction="inherit"
                dx="0"
                dy="3.55"
                x="29"
                y="19.611650485436897"
              >
                <tspan
                  dx="0"
                  style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#282d33;stroke:transparent"
                  text-anchor="end"
                  x="29"
                >
                  100
                </tspan>
              </text>
            </g>
          </g>
        </svg>
        <div
          style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
        >
          <svg
            height="60"
            style="overflow:visible;width:100%;height:100%"
            viewBox="0 0 300 60"
            width="300"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
